correção de bugs para entrega da primeira versão

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -28,7 +29,7 @@
 
 
     <main class="container main-login">
-        <div class="row mb-3 me-4 p-5 rounded-end">
+        <div class="row mb-3 me-4 p-5 rounded-end divRed">
 
             <label id="labelLogin">Login</label>
             <div class="input-group mb-3">
