--- a/projeto/dashboard.html
+++ b/projeto/dashboard.html
@@ -85,20 +85,19 @@
 
             <div class="container-fluid">
 
-                <div class="row ps-4 pe-4 pt-3">
+                <div class="row ps-4 pe-4 pt-3 mb-3">
 
                     <div class="col-2 mb-3">
                         <img src="imagens/tesla.png" alt="tesla" class="img-fluid rounded img-thumbnail">
                     </div>
 
-                    <div class="col-10 mb-3">
+                    <div class="col-10 mb-3 d-inline">
                         <h4 class="d-inline">Tesla</h4>
-                        <h4 class="float-end">R$ 300</h4>
+                        <h4 class="float-end din">R$ 300</h4>
                         <br>
-                        <span class="rodape">12:40am  21 Jun 2022</span>
-                        <br>
+                        <span class="rodape d-inline">12:40am  21 Jun 2022</span>                 
                         <span class="rodapeVerde d-inline float-end">2.0%</span>   
-                        <img src="imagens/icons/greenArrow.png" alt="subiu" class="img-fluid setaVerde float-end">  
+                        <img src="imagens/icons/greenArrow.png" alt="subiu" class=" float-end img-fluid setaVerde ">  
                
                     </div>
 
@@ -108,12 +107,11 @@
                         <img src="imagens/bitcoin.png" alt="bitcoin" class="img-fluid rounded img-thumbnail">
                     </div>
 
-                    <div class="col-10">
+                    <div class="col-10 d-inline">
                         <h4 class="d-inline">Bitcoin</h4>
-                        <h4 class="float-end">R$ 25.550</h4>
+                        <h4 class="float-end din">R$ 25.550</h4>
                         <br>
                         <span class="rodape d-inline">12:40am  21 Jun 2022</span>
-                        <br>
                         <span class="rodapeVerde d-inline float-end">2.0%</span>   
                         <img src="imagens/icons/greenArrow.png" alt="subiu" class="img-fluid setaVerde float-end">  
                     </div>
@@ -144,26 +142,6 @@
             </div>
         </div>
     </nav>
-
-    <!-- <footer class="container fixed-bottom">
-
-        <div class="row" id="nav">
-            <div class="col">
-                <img src="imagens/icons/carteira.png" alt="carteira-icon" class="img-fluid">
-            </div>
-            <div class="col">
-                <img src="imagens/icons/calendario.png" alt="calendario-icon" class="img-fluid">
-            </div>
-            <div class="col">
-                <img src="imagens/icons/sino.png" alt="sino-icon" class="img-fluid">
-            </div>
-            <div class="col">
-                <img src="imagens/icons/user.png" alt="user-icon" class="img-fluid">
-            </div>
-        </div>
-
-
-    </footer>-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
