segundo commit implementando a correção de bugs

--- a/projeto/dashboard.html
+++ b/projeto/dashboard.html
@@ -36,7 +36,7 @@
 
 
 
-    <main class="container overflow-hidden">
+    <main class="container-sm overflow-auto">
 
         <div class="row mb-3 mt-4 cartao-dash shadow">
 
